Fix overlap on content view

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1105,6 +1105,10 @@ label.title-label {
     background-size: contain;
 }
 
+.supplemental-downloads {
+    text-align: right;
+}
+
 @media (max-width: 768px) {
     .edit-button-and-logo {
         padding-top: 20px;
